[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/SoundManager.gd" type="Script" id=1]
[ext_resource path="res://SFX/Yrana - ArcherTower.wav" type="AudioStream" id=2]

[node name="SoundManager" type="Node2D"]
script = ExtResource( 1 )

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]

[node name="ShootPlayer" type="AudioStreamPlayer" parent="."]

[node name="Theme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -20.0
autoplay = true

[node name="HealPlayer" type="AudioStreamPlayer" parent="."]

[node name="KillPlayer" type="AudioStreamPlayer" parent="."]
